--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Développeur web</title>
 </head>
 
@@ -12,11 +13,11 @@
 <body>
 
     <header>
-        <div><img id="logo-header" src="assets/images/logoHeader.webp" alt="logoHeader">
+        <div class="logoDevWeb"><img id="logo-header" src="assets/images/logoHeader.webp" alt="logoHeader">
             <p class="logo-titre">Développeur Web</p>
         </div>
 
-        <nav class="bar-nav">
+        <nav  class="bar-nav animate__animated">
             <ul class="bar-nav-ul">
                 <li><a href="./index.html">Accueil</a></li>
                 <li><a href="./pages/page1.html">Html</a></li>
@@ -86,6 +87,7 @@
         </div>
 
     </footer>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
