--- a/pages/page4.html
+++ b/pages/page4.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <div><img id="logo-header" src="../assets/images/logoHeader.webp" alt="logoHeader">
+        <div class="logoDevWeb"><img id="logo-header" src="../assets/images/logoHeader.webp" alt="logoHeader">
             <p class="logo-titre">Développeur Web</p>
         </div>
 
@@ -131,5 +131,5 @@
 
     </footer>
 
-
+    <script src="../assets/js/main.js"></script>
 </body>
